Backend/Deployment/network-polices.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: logger-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: logger
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: authenticator
